# rust-map-reduce

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs
master/: Cargo.toml  build.rs
master-node/: Cargo.toml  build.rs  config.json
master-node/proto/: worker.proto
master-node/src/: config.rs  main.rs  service.rs
master-node/src/node_registry/: job.rs  message.rs  mod.rs  node_heap.rs  registry_worker.rs  task.rs
master/src/: cleanup.rs  heartbeat_monitor.rs  main.rs  scheduler.rs  state.rs  storage.rs
master/src/routes/: client.rs  grpc.rs  mod.rs
proto/: Cargo.toml  build.rs
proto/proto/: mapreduce.proto
proto/src/: lib.rs
solutions/: README.md  architecture.md  cleanup.md  client_api.md  data_flow.md  grpc_protocol.md  heartbeat_eviction.md  scheduling.md  wasm_runtime.md
task/: Cargo.toml  build.rs
task/src/: lib.rs
task/wit/: mapreduce.wit
worker/: Cargo.toml
worker-node/: Cargo.toml  build.rs  config.json
worker-node/data/wasm/: sort.wasm
worker-node/proto/: master.proto
worker-node/src/: config.rs  main.rs
worker-node/src/service/: worker_service.rs
worker-node/src/workers/: mod.rs  wasm_executor.rs  worker_pool.rs
worker/src/: heartbeat.rs  main.rs  state.rs  status.rs  task_loop.rs  wasm_runtime.rs
