[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.5"
futures = "0.3"
http-body-util = "0.1"
http-body = "1"
tower-http = { version = "0.5", features = ["fs"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
proto = { path = "../proto" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
