[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
wasmtime = "28"
wasmtime-wasi = "28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
proto = { path = "../proto" }
